@@ -22,6 +22,8 @@ let bool_fun b = (b : bool)
 
 let int_fun i = (i : int)
 
+let nativeint_fun i = (i : nativeint)
+
 let sourceLoc_fun((file : string), (line : int), (char : int) as loc) = 
   (loc : sourceLoc)
 
@@ -144,14 +146,14 @@ and atomicType_fun = function
 			  compound_info_fun compound_info,
 			  List.map sTemplateArgument_fun sTemplateArgument_list)
 
-  | EnumType(annot, string, variable, accessKeyword, string_int_list) ->
+  | EnumType(annot, string, variable, accessKeyword, string_nativeint_list) ->
       EnumType(annotation_fun annot,
 	       string_fun string,
 	       variable_fun variable,
 	       accessKeyword_fun accessKeyword,
-	       List.map (fun (string,int) -> 
-			   (string_fun string, int_fun int))
-		 string_int_list)
+	       List.map (fun (string,nativeint) -> 
+			   (string_fun string, nativeint_fun nativeint))
+		 string_nativeint_list)
 
   | TypeVariable(annot, string, variable, accessKeyword) ->
       TypeVariable(annotation_fun annot,
