@@ -1,15 +1,19 @@
-ast_graph.cmo: ../elsa/ml_ctype.cmo ../elsa/cc_ml_types.cmo \
+ast_graph.cmo: ../elsa/ml_ctype.cmo dense_set.cmi ../elsa/cc_ml_types.cmo \
     ../elsa/cc_ast_gen_type.cmo ast_util.cmo ../elsa/ast_annotation.cmo 
-ast_graph.cmx: ../elsa/ml_ctype.cmx ../elsa/cc_ml_types.cmx \
+ast_graph.cmx: ../elsa/ml_ctype.cmx dense_set.cmx ../elsa/cc_ml_types.cmx \
     ../elsa/cc_ast_gen_type.cmx ast_util.cmx ../elsa/ast_annotation.cmx 
 ast_util.cmo: ../elsa/ml_ctype.cmo ../elsa/cc_ml_types.cmo \
     ../elsa/cc_ast_gen_type.cmo ../elsa/ast_annotation.cmo 
 ast_util.cmx: ../elsa/ml_ctype.cmx ../elsa/cc_ml_types.cmx \
     ../elsa/cc_ast_gen_type.cmx ../elsa/ast_annotation.cmx 
-astiter.cmo: ../elsa/ml_ctype.cmo ../elsa/cc_ml_types.cmo \
-    ../elsa/cc_ast_gen_type.cmo ../elsa/ast_annotation.cmo 
-astiter.cmx: ../elsa/ml_ctype.cmx ../elsa/cc_ml_types.cmx \
-    ../elsa/cc_ast_gen_type.cmx ../elsa/ast_annotation.cmx 
+astiter.cmo: ../elsa/ml_ctype.cmo dense_set.cmi ../elsa/cc_ml_types.cmo \
+    ../elsa/cc_ast_gen_type.cmo ast_util.cmo ../elsa/ast_annotation.cmo 
+astiter.cmx: ../elsa/ml_ctype.cmx dense_set.cmx ../elsa/cc_ml_types.cmx \
+    ../elsa/cc_ast_gen_type.cmx ast_util.cmx ../elsa/ast_annotation.cmx 
+astiternodes.cmo: ../elsa/ml_ctype.cmo dense_set.cmi ../elsa/cc_ml_types.cmo \
+    ../elsa/cc_ast_gen_type.cmo ast_util.cmo ../elsa/ast_annotation.cmo 
+astiternodes.cmx: ../elsa/ml_ctype.cmx dense_set.cmx ../elsa/cc_ml_types.cmx \
+    ../elsa/cc_ast_gen_type.cmx ast_util.cmx ../elsa/ast_annotation.cmx 
 astmap.cmo: ../elsa/ml_ctype.cmo ../elsa/cc_ml_types.cmo \
     ../elsa/cc_ast_gen_type.cmo ../elsa/ast_annotation.cmo 
 astmap.cmx: ../elsa/ml_ctype.cmx ../elsa/cc_ml_types.cmx \
@@ -18,7 +22,7 @@ dense_set.cmo: dense_set.cmi
 dense_set.cmx: dense_set.cmi 
 dumpast.cmo: ../elsa/cc_ast_gen_type.cmo ../elsa/ast_annotation.cmo 
 dumpast.cmx: ../elsa/cc_ast_gen_type.cmx ../elsa/ast_annotation.cmx 
-hashloc.cmo: ../elsa/ml_ctype.cmo ../elsa/cc_ml_types.cmo \
-    ../elsa/cc_ast_gen_type.cmo ../elsa/ast_annotation.cmo 
-hashloc.cmx: ../elsa/ml_ctype.cmx ../elsa/cc_ml_types.cmx \
-    ../elsa/cc_ast_gen_type.cmx ../elsa/ast_annotation.cmx 
+hashloc.cmo: ../elsa/ml_ctype.cmo dense_set.cmi ../elsa/cc_ml_types.cmo \
+    ../elsa/cc_ast_gen_type.cmo ast_util.cmo ../elsa/ast_annotation.cmo 
+hashloc.cmx: ../elsa/ml_ctype.cmx dense_set.cmx ../elsa/cc_ml_types.cmx \
+    ../elsa/cc_ast_gen_type.cmx ast_util.cmx ../elsa/ast_annotation.cmx 
